--- a/applications/utilities/mesh/conversion/mshToFoam/mshToFoam.vcxproj.filters
+++ b/applications/utilities/mesh/conversion/mshToFoam/mshToFoam.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="meshToFoam.cxx">
+    <ClCompile Include="mshToFoam.cxx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
